--- a/EuroSys2022/ref.bib
+++ b/EuroSys2022/ref.bib
@@ -1,3 +1,17 @@
+@inproceedings{simplenuma,
+author = {Bolosky, W. and Fitzgerald, R. and Scott, M.},
+title = {Simple but Effective Techniques for NUMA Memory Management},
+year = {1989},
+isbn = {0897913388},
+publisher = {Association for Computing Machinery},
+url = {https://doi.org/10.1145/74850.74854},
+doi = {10.1145/74850.74854},
+booktitle = {Proceedings of the Twelfth ACM Symposium on Operating Systems Principles},
+pages = {19–31},
+numpages = {13},
+series = {SOSP '89}
+}
+
 @inproceedings{SOSDuli,
  author = {Li, Du and Srisa-an, Witawas and Dwyer, Matthew B.},
  title = {SOS: Saving Time in Dynamic Race Detection with Stationary Analysis},
@@ -145,6 +159,13 @@
  acmid = {2451157},
  keywords = {multicore, numa, operating systems, scheduling},
 } 
+
+@inproceedings{li2013numa,
+  title={NUMA-aware algorithms: the case of data shuffling.},
+  author={Li, Yinan and Pandis, Ippokratis and Mueller, Rene and Raman, Vijayshankar and Lohman, Guy M},
+  booktitle={CIDR},
+  year={2013}
+}
 
 @inproceedings{Lepers:2015:TMP:2813767.2813788,
  author = {Lepers, Baptiste and Qu{\'e}ma, Vivien and Fedorova, Alexandra},
@@ -2202,23 +2223,7 @@ series = {ISMM ’98}
 }
   
 
-@inproceedings{XULIU,
-author = {Liu, Xu and Mellor-Crummey, John},
-title = {A Tool to Analyze the Performance of Multithreaded Programs on NUMA Architectures},
-year = {2014},
-isbn = {9781450326568},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/2555243.2555271},
-doi = {10.1145/2555243.2555271},
-booktitle = {Proceedings of the 19th ACM SIGPLAN Symposium on Principles and Practice of Parallel Programming},
-pages = {259–272},
-numpages = {14},
-keywords = {performance optimization, profiler, threads, NUMA, memory access pattern},
-location = {Orlando, Florida, USA},
-series = {PPoPP ’14}
-}
-  
+
 
 
 @inproceedings {180813,
